[gd_scene load_steps=79 format=3 uid="uid://c4mr8y2p40pjp"]

[ext_resource type="Script" path="res://Fish/fish.gd" id="1_pktc1"]
[ext_resource type="Texture2D" uid="uid://1pn7eve6kw57" path="res://Fish/Fish Swimming.png" id="2_iah4u"]
[ext_resource type="Script" path="res://Fish/hook_box.gd" id="3_fjq38"]
[ext_resource type="Texture2D" uid="uid://cowd32rws5qqi" path="res://Fish/Fish Hooked.png" id="3_y7ddl"]
[ext_resource type="Script" path="res://Fish/hit_box.gd" id="4_e26ob"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fjtpe"]
atlas = ExtResource("2_iah4u")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_his5f"]
atlas = ExtResource("2_iah4u")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmrar"]
atlas = ExtResource("2_iah4u")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wso07"]
atlas = ExtResource("2_iah4u")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4nlv"]
atlas = ExtResource("2_iah4u")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsqme"]
atlas = ExtResource("2_iah4u")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j2gk"]
atlas = ExtResource("2_iah4u")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ej7s"]
atlas = ExtResource("2_iah4u")
region = Rect2(1400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3287"]
atlas = ExtResource("2_iah4u")
region = Rect2(1600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx7r4"]
atlas = ExtResource("2_iah4u")
region = Rect2(1800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrgfy"]
atlas = ExtResource("2_iah4u")
region = Rect2(2000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1jsp"]
atlas = ExtResource("2_iah4u")
region = Rect2(2200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yy77"]
atlas = ExtResource("2_iah4u")
region = Rect2(2400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj6cn"]
atlas = ExtResource("2_iah4u")
region = Rect2(2600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbejg"]
atlas = ExtResource("2_iah4u")
region = Rect2(2800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd011"]
atlas = ExtResource("2_iah4u")
region = Rect2(3000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nrqq"]
atlas = ExtResource("2_iah4u")
region = Rect2(3200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8aqku"]
atlas = ExtResource("2_iah4u")
region = Rect2(3400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mse13"]
atlas = ExtResource("2_iah4u")
region = Rect2(3600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wesba"]
atlas = ExtResource("2_iah4u")
region = Rect2(3800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl5st"]
atlas = ExtResource("2_iah4u")
region = Rect2(4000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox835"]
atlas = ExtResource("2_iah4u")
region = Rect2(4200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jttnj"]
atlas = ExtResource("2_iah4u")
region = Rect2(4400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l6jl"]
atlas = ExtResource("2_iah4u")
region = Rect2(4600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7kwo"]
atlas = ExtResource("2_iah4u")
region = Rect2(4800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngbec"]
atlas = ExtResource("2_iah4u")
region = Rect2(5000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_reeqx"]
atlas = ExtResource("2_iah4u")
region = Rect2(5200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_inxgn"]
atlas = ExtResource("2_iah4u")
region = Rect2(5400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gok23"]
atlas = ExtResource("2_iah4u")
region = Rect2(5600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukut8"]
atlas = ExtResource("2_iah4u")
region = Rect2(5800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xow4k"]
atlas = ExtResource("2_iah4u")
region = Rect2(6000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmbnl"]
atlas = ExtResource("2_iah4u")
region = Rect2(6200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_m431e"]
atlas = ExtResource("2_iah4u")
region = Rect2(6400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwepn"]
atlas = ExtResource("2_iah4u")
region = Rect2(6600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5qu8"]
atlas = ExtResource("2_iah4u")
region = Rect2(6800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qcyj"]
atlas = ExtResource("2_iah4u")
region = Rect2(7000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0f7h"]
atlas = ExtResource("2_iah4u")
region = Rect2(7200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6srr"]
atlas = ExtResource("2_iah4u")
region = Rect2(7400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_05m5b"]
atlas = ExtResource("2_iah4u")
region = Rect2(7600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjfvv"]
atlas = ExtResource("2_iah4u")
region = Rect2(7800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6seko"]
atlas = ExtResource("2_iah4u")
region = Rect2(8000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk4nq"]
atlas = ExtResource("2_iah4u")
region = Rect2(8200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_aafnt"]
atlas = ExtResource("2_iah4u")
region = Rect2(8400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3y28"]
atlas = ExtResource("2_iah4u")
region = Rect2(8600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc7qm"]
atlas = ExtResource("2_iah4u")
region = Rect2(8800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7san"]
atlas = ExtResource("2_iah4u")
region = Rect2(9000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_li02u"]
atlas = ExtResource("2_iah4u")
region = Rect2(9200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_oogt3"]
atlas = ExtResource("2_iah4u")
region = Rect2(9400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_03we1"]
atlas = ExtResource("2_iah4u")
region = Rect2(9600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1ayc"]
atlas = ExtResource("2_iah4u")
region = Rect2(9800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvk48"]
atlas = ExtResource("2_iah4u")
region = Rect2(10000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilgwb"]
atlas = ExtResource("2_iah4u")
region = Rect2(10200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_aolvy"]
atlas = ExtResource("2_iah4u")
region = Rect2(10400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pir7"]
atlas = ExtResource("2_iah4u")
region = Rect2(10600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkiut"]
atlas = ExtResource("2_iah4u")
region = Rect2(10800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp58c"]
atlas = ExtResource("2_iah4u")
region = Rect2(11000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0bc4"]
atlas = ExtResource("2_iah4u")
region = Rect2(11200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwipf"]
atlas = ExtResource("2_iah4u")
region = Rect2(11400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l6fn"]
atlas = ExtResource("2_iah4u")
region = Rect2(11600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtw1f"]
atlas = ExtResource("2_iah4u")
region = Rect2(11800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxba8"]
atlas = ExtResource("2_iah4u")
region = Rect2(12000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2hy7"]
atlas = ExtResource("2_iah4u")
region = Rect2(12200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_toufw"]
atlas = ExtResource("2_iah4u")
region = Rect2(12400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_fovv5"]
atlas = ExtResource("2_iah4u")
region = Rect2(12600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugoni"]
atlas = ExtResource("3_y7ddl")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_572wh"]
atlas = ExtResource("3_y7ddl")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_brikv"]
atlas = ExtResource("3_y7ddl")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_swfqr"]
atlas = ExtResource("3_y7ddl")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryjjy"]
atlas = ExtResource("3_y7ddl")
region = Rect2(800, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_thuap"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjtpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_his5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmrar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wso07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4nlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsqme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j2gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ej7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3287")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx7r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrgfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1jsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yy77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj6cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbejg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd011")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nrqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8aqku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mse13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wesba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl5st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox835")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jttnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l6jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7kwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngbec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reeqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inxgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gok23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukut8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xow4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmbnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m431e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwepn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5qu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qcyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0f7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6srr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05m5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjfvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6seko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk4nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aafnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3y28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc7qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7san")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li02u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oogt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03we1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1ayc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvk48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilgwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aolvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pir7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkiut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp58c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0bc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwipf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l6fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtw1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxba8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2hy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toufw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fovv5")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugoni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_572wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brikv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swfqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryjjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swfqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brikv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_572wh")
}],
"loop": true,
"name": &"fish hooked",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2bvhk"]
radius = 95.0368

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hrl4e"]
radius = 7.0
height = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t5pl3"]
height = 46.0

[node name="Fish" type="Area2D"]
z_index = 2
collision_layer = 0
collision_mask = 7
script = ExtResource("1_pktc1")

[node name="SpriteAnimation" type="AnimatedSprite2D" parent="."]
rotation = 0.244346
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_thuap")
animation = &"fish hooked"
autoplay = "default"
frame_progress = 0.96579

[node name="FishHead" type="Sprite2D" parent="SpriteAnimation"]
position = Vector2(8.5, 31)

[node name="HookBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource("3_fjq38")

[node name="HookBox" type="CollisionShape2D" parent="HookBox"]
shape = SubResource("CircleShape2D_2bvhk")

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitoring = false
script = ExtResource("4_e26ob")

[node name="HitBox" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_hrl4e")

[node name="HookedTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CaughtHitBox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_t5pl3")

[node name="FadeInTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="HookBox" to="HookBox" method="_on_area_entered"]
[connection signal="area_exited" from="HookBox" to="HookBox" method="_on_area_exited"]
[connection signal="hook_box_entered" from="HookBox" to="." method="_on_hook_box_hook_box_entered"]
[connection signal="hook_box_exited" from="HookBox" to="." method="_on_hook_box_hook_box_exited"]
[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_area_entered"]
[connection signal="hit_box_entered" from="HitBox" to="." method="_on_hit_box_hit_box_entered"]
[connection signal="timeout" from="HookedTimer" to="." method="_on_hooked_timer_timeout"]
